--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://opi-project.github.io/'
+baseURL = 'http://Diamond-Bluff.github.io/'
 languageCode = 'en-us'
 title = 'OPI Project Website'
 theme = "ananke"
