website: Make the website a bit more fancy
This adds integrations for both GitHub and Slack. I also added an
`About` page, and a nice image of Diamond Bluff, Wisconsin.

Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/config.toml
+++ b/config.toml
@@ -5,3 +5,11 @@ theme = "ananke"
 
 [params]
   post_content_classes = "sans-serif"
+
+[[params.ananke_socials]]
+  name = "github"
+  url = "https://github.com/Diamond-Bluff"
+
+[[params.ananke_socials]]
+  name = "slack"
+  url = "https://join.slack.com/t/opi-project/signup"
