Change name back to Diamond Bluff
Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://Diamond-Bluff.github.io/'
 languageCode = 'en-us'
-title = 'OPI Project Website'
+title = 'Diamond Bluff Project Website'
 theme = "ananke"
 
 [params]
